# pop-node

./: .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  Dockerfile  README.md  codecov.yml  compare_versions.sh  flake.nix  messaging-spec.md  messaging_weights.rs  pop-bench.toml  rust-toolchain.toml  test.rs
emulated-integration-tests/: Cargo.toml
emulated-integration-tests/src/: lib.rs  rococo_network.rs
emulated-integration-tests/src/chains/: mod.rs
emulated-integration-tests/src/tests/: asset_hub_rococo.rs  mod.rs
extension/: Cargo.toml  README.md
extension/contract/: Cargo.toml
extension/src/: constants.rs  decoding.rs  environment.rs  error.rs  functions.rs  lib.rs  matching.rs  mock.rs  reboot.rs  tests.rs  v0.rs
extension/src/tests/: contract.rs  fungibles.rs  mod.rs  proxy.rs  utils.rs
integration-tests/: Cargo.toml  README.md  network.toml  relayer.toml
integration-tests/artifacts/: para-2000-genesis-code  para-2000-genesis-state
integration-tests/e2e/: Cargo.toml  main.rs  rococo.scale
integration-tests/e2e/metadata/: rococo.scale
integration-tests/src/: lib.rs
integration-tests/src/chains/: mod.rs
ismp/core/: Cargo.toml
ismp/pallet/: Cargo.toml
ismp/parachain/: Cargo.toml
ismp/parachain/inherent/: Cargo.toml
ismp/parachain/src/: consensus.rs
ismp/state-machine/: Cargo.toml
node/: Cargo.toml
node/chain_specs/: pop-paseo.plain.json  pop-paseo.raw.json  pop-rococo.plain.json  pop-rococo.raw.json
node/chain_specs/mainnet/: 3395-mainnet-head-state  3395-mainnet-spec-raw.json  genesis-hash  pop-polkadot.plain.json  pop-wasm
node/chain_specs/testnet/: paseo.raw.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service-region-x.rs  service.rs
pallets/api/: Cargo.toml
pallets/api-vnext/: Cargo.toml  README.md  weights.md
pallets/api-vnext/src/: errors.rs  fungibles.rs  lib.rs  messaging.rs  mock.rs  nonfungibles.rs
pallets/api/src/: extension.rs  fungibles.rs  lib.rs  mock.rs  xcm.rs
pallets/asset-manager/: Cargo.toml
pallets/asset-manager/src/: benchmarks.rs  lib.rs  mock.rs  tests.rs  xcm_primitives.rs
pallets/builder-incentives/: Cargo.toml
pallets/builder-incentives/src/: check_sponsored.rs  contract_fee_handler.rs  lib.rs  types.rs
pallets/demo/: Cargo.toml
pallets/demo/src/: callback.rs  lib.rs
pallets/motion/: Cargo.toml  README.md
pallets/motion/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/nfts/: Cargo.toml  README.md
pallets/nfts/runtime-api/: Cargo.toml
pallets/nfts/src/: benchmarking.rs  common_functions.rs  impl_nonfungibles.rs  lib.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/pallet-async/: Cargo.toml
pallets/pallet-async/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/revive/: Cargo.toml
pallets/revive/fixtures/: Cargo.toml  build.rs
pallets/revive/mock-network/: Cargo.toml
pallets/revive/proc-macro/: Cargo.toml
pallets/revive/rpc/: Cargo.toml
pallets/revive/src/: address.rs  benchmarking.rs  benchmarking_dummy.rs  call_builder.rs  chain_extension.rs  debug.rs  evm.rs  exec.rs  gas.rs  lib.rs  limits.rs  precompiles.rs  primitives.rs  storage.rs  test_utils.rs  tests.rs  tracing.rs  transient_storage.rs  weights.rs
pallets/revive/uapi/: Cargo.toml
pallets/sponsorships/: Cargo.toml
pallets/sponsorships/src/: lib.rs  sponsored.rs  types.rs  weights.rs
pallets/template/: Cargo.toml
pop-api/: Cargo.toml  README.md  build.rs  expanded.rs
pop-api-vnext/: .gitignore  Cargo.toml  README.md
pop-api-vnext/examples/fungibles/: Cargo.toml  README.md  lib.rs
pop-api-vnext/examples/fungibles-vnext/: Cargo.toml
pop-api-vnext/examples/messaging/: Cargo.toml  README.md  lib.rs
pop-api-vnext/integration-tests/: Cargo.toml
pop-api-vnext/integration-tests/src/: fungibles.rs  lib.rs  messaging.rs
pop-api-vnext/src/: errors.rs  fungibles.rs  lib.rs  messaging.rs  sol.rs
pop-api-vnext/src/fungibles/: README.md  erc20.rs  errors.rs  events.rs  mod.rs  v0.rs
pop-api-vnext/src/messaging/: README.md  ismp.rs  v0.rs  xcm.rs
pop-api/examples/: .gitignore  README.md
pop-api/examples/balance-transfer/: Cargo.toml  lib.rs
pop-api/examples/chain-extension/: Cargo.toml  README.md
pop-api/examples/cross_chain/: Cargo.toml  lib.rs
pop-api/examples/dao/: Cargo.toml  README.md  lib.rs
pop-api/examples/filtered-call/: Cargo.toml  lib.rs
pop-api/examples/flipper/: Cargo.toml  lib.rs
pop-api/examples/foreign_fungibles/: Cargo.toml  lib.rs
pop-api/examples/fungibles/: Cargo.toml  README.md  expanded.rs  helpers.rs  lib.rs  tests.rs  traits.rs  utils.rs
pop-api/examples/incentives/: Cargo.toml  lib.rs
pop-api/examples/messaging/: Cargo.toml  lib.rs
pop-api/examples/nft-verifier/: Cargo.toml
pop-api/examples/nfts/: Cargo.toml  lib.rs
pop-api/examples/nonfungibles/: Cargo.toml  README.md  lib.rs  tests.rs
pop-api/examples/place-spot-order/: Cargo.toml  lib.rs
pop-api/examples/read-runtime-state/: Cargo.toml  lib.rs
pop-api/examples/sponsorships/: Cargo.toml  lib.rs
pop-api/examples/trust_backed_assets/: Cargo.toml  lib.rs
pop-api/extensions/: Cargo.toml
pop-api/extensions/src/: benchmarking.rs  lib.rs
pop-api/integration-tests/: Cargo.toml  build.rs
pop-api/integration-tests/src/: cross_chain.rs  dao.rs  environment.rs  foreign_fungibles.rs  incentives.rs  lib.rs  local_fungibles.rs  (+3 more)
pop-api/primitives/: Cargo.toml
pop-api/src/: error.rs  lib.rs  macros.rs  primitives.rs  sandbox.rs  utils.rs
pop-sandbox/: Cargo.toml  README.md
pop-sandbox/src/: lib.rs  utils.rs
primitives/: Cargo.toml  README.md
primitives/src/: cross_chain.rs  lib.rs  storage_keys.rs
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/devnet/: Cargo.toml  build.rs  rustc-ice-2024-07-20T20_16_19-33192.txt  rustc-ice-2025-03-05T09_15_31-2111556.txt
runtime/extensions/: Cargo.toml
runtime/mainnet/: Cargo.toml  build.rs
runtime/src/: assets_config.rs  contracts_config.rs  extensions.rs  ismp.rs  ismp_config.rs  lib.rs  nonfungibles_pop.rs  xcm_config.rs
runtime/testnet/: Cargo.toml  build.rs
(+502 files in other folders)
