[profile.release]
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[workspace.package]
authors = [ "R0GUE <go@r0gue.io>" ]
description = "Pop Network makes it easy for smart contract developers to use the Power of Polkadot."
edition = "2021"
homepage = "https://r0gue.io"
license = "Unlicense"
repository = "https://github.com/r0gue-io/pop-node/"

[workspace]
exclude = [
	"extension/contract",
	"pop-api",
	"tests/contracts",
]
members = [
	"integration-tests",
	"node",
	"pallets/*",
	"pop-api/integration-tests",
	"primitives",
	"runtime/devnet",
	"runtime/mainnet",
	"runtime/testnet",
]

resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.5.10", features = [ "derive" ] }
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
	"derive",
] }
color-print = "0.3.4"
contract-build = "5.0.2"
docify = "0.2.8"
enumflags2 = "0.7.9"
env_logger = "0.11.5"
futures = "0.3.30"
hex = "0.4.3"
hex-literal = "0.4.1"
impl-trait-for-tuples = "0.2.2"
jsonrpsee = { version = "0.24.3", features = [ "server" ] }
log = { version = "0.4.22", default-features = false }
rand = "0.8.5"
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
serde = "1.0.209"
serde_json = { version = "1.0.127", default-features = false }
smallvec = "1.11.2"
subxt = "0.38.0"
subxt-signer = "0.38.0"
tokio = { version = "1.36", features = [ "macros", "rt-multi-thread", "time" ] }
tracing-subscriber = { version = "0.3.18", default-features = false }

# Build
substrate-build-script-utils = { version = "11.0.0" }
substrate-wasm-builder = { version = "26.0.0" }

# Local
pallet-api = { path = "pallets/api", default-features = false }
pallet-motion = { path = "pallets/motion", default-features = false }
pallet-nfts = { path = "pallets/nfts", default-features = false }
pop-chain-extension = { path = "./extension", default-features = false }
pop-primitives = { path = "./primitives", default-features = false }
pop-runtime-common = { path = "runtime/common", default-features = false }
pop-runtime-devnet = { path = "runtime/devnet", default-features = true }   # default-features=true required for `-p pop-node` builds
pop-runtime-mainnet = { path = "runtime/mainnet", default-features = true } # default-features=true required for `-p pop-node` builds
pop-runtime-testnet = { path = "runtime/testnet", default-features = true } # default-features=true required for `-p pop-node` builds

# Substrate
frame-benchmarking = { version = "40.0.0", default-features = false }
frame-benchmarking-cli = { version = "47.0.0" }
frame-executive = { version = "40.0.0", default-features = false }
frame-metadata = { version = "18.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.8.0", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
frame-system = { version = "40.1.0", default-features = false }
frame-system-benchmarking = { version = "40.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "36.0.0", default-features = false }
frame-try-runtime = { version = "0.46.0", default-features = false }
pallet-assets = { version = "42.0.0", default-features = false }
pallet-aura = { version = "39.0.0", default-features = false }
pallet-authorship = { version = "40.0.0", default-features = false }
pallet-balances = { version = "41.1.0", default-features = false }
pallet-collective = { version = "40.1.0", default-features = false }
pallet-contracts = { version = "40.1.0", default-features = false }
pallet-message-queue = { version = "43.1.0", default-features = false }
pallet-multisig = { version = "40.1.0", default-features = false }
pallet-nft-fractionalization = { version = "23.0.0", default-features = false }
pallet-nfts-runtime-api = { version = "26.0.0", default-features = false }
pallet-nfts-sdk = { version = "34.1.0", package = "pallet-nfts", default-features = false }
pallet-preimage = { version = "40.0.0", default-features = false }
pallet-proxy = { version = "40.1.0", default-features = false }
pallet-revive = { version = "0.5.0", default-features = false }
pallet-scheduler = { version = "41.0.0", default-features = false }
pallet-session = { version = "40.0.0", default-features = false }
pallet-sudo = { version = "40.0.0", default-features = false }
pallet-timestamp = { version = "39.0.0", default-features = false }
pallet-transaction-payment = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "43.0.0" }
pallet-transaction-payment-rpc-runtime-api = { version = "40.0.0", default-features = false }
pallet-treasury = { version = "39.0.0", default-features = false }
pallet-utility = { version = "40.0.0", default-features = false }
prometheus-endpoint = { version = "0.17.2", default-features = false, package = "substrate-prometheus-endpoint" }
sc-basic-authorship = { version = "0.49.0" }
sc-chain-spec = { version = "42.0.0" }
sc-cli = { version = "0.51.0" }
sc-client-api = { version = "39.0.0" }
sc-consensus = { version = "0.48.0" }
sc-executor = { version = "0.42.0" }
sc-network = { version = "0.49.0" }
sc-network-sync = { version = "0.48.0" }
sc-offchain = { version = "44.0.0" }
sc-rpc = { version = "44.0.0" }
sc-service = { version = "0.50.0" }
sc-sysinfo = { version = "42.0.0" }
sc-telemetry = { version = "28.1.0" }
sc-tracing = { version = "39.0.0" }
sc-transaction-pool = { version = "39.0.0" }
sc-transaction-pool-api = { version = "39.0.0" }
sp-api = { version = "36.0.1", default-features = false }
sp-authority-discovery = { version = "36.0.0", default-features = false }
sp-block-builder = { version = "36.0.0", default-features = false }
sp-blockchain = { version = "39.0.0" }
sp-consensus-aura = { version = "0.42.0", default-features = false }
sp-consensus-babe = { version = "0.42.1", default-features = false }
sp-consensus-beefy = { version = "24.1.0", default-features = false }
sp-consensus-grandpa = { version = "23.1.0", default-features = false }
sp-core = { version = "36.1.0", default-features = false }
sp-genesis-builder = { version = "0.17.0", default-features = false }
sp-inherents = { version = "36.0.0", default-features = false }
sp-io = { version = "40.0.0", default-features = false }
sp-keyring = { version = "41.0.0", default-features = false }
sp-keystore = { version = "0.42.0" }
sp-mmr-primitives = { version = "36.1.0", default-features = false }
sp-offchain = { version = "36.0.0", default-features = false }
sp-runtime = { version = "41.1.0", default-features = false }
sp-session = { version = "38.1.0", default-features = false }
sp-timestamp = { version = "36.0.0" }
sp-transaction-pool = { version = "36.0.0", default-features = false }
sp-version = { version = "39.0.0", default-features = false }
substrate-frame-rpc-system = { version = "43.0.0" }

# Polkadot
pallet-xcm = { version = "19.1.0", default-features = false }
pallet-xcm-benchmarks = { version = "20.0.0", default-features = false }
polkadot-cli = { version = "23.0.0" }
polkadot-parachain-primitives = { version = "16.1.0", default-features = false }
polkadot-primitives = { version = "18.1.0", default-features = false }
polkadot-runtime-common = { version = "19.1.0", default-features = false }
polkadot-runtime-parachains = { version = "19.1.0", default-features = false }
rococo-runtime = { version = "22.1.0", default-features = false }
rococo-runtime-constants = { version = "20.0.0", default-features = false }
xcm = { version = "16.1.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "20.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "19.1.0", package = "staging-xcm-executor", default-features = false }
xcm-runtime-apis = { version = "0.7.0", default-features = false }

# Cumulus
asset-test-utils = { version = "23.0.0", default-features = false }
cumulus-client-cli = { version = "0.22.0" }
cumulus-client-collator = { version = "0.22.0" }
cumulus-client-consensus-aura = { version = "0.22.0" }
cumulus-client-consensus-common = { version = "0.22.0" }
cumulus-client-consensus-proposer = { version = "0.19.0" }
cumulus-client-service = { version = "0.23.0" }
cumulus-pallet-aura-ext = { version = "0.20.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.20.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "21.0.0", default-features = false }
cumulus-pallet-weight-reclaim = { version = "0.2.0", default-features = false }
cumulus-pallet-xcm = { version = "0.19.1", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.20.0", default-features = false }
cumulus-primitives-aura = { version = "0.17.0", default-features = false }
cumulus-primitives-core = { version = "0.18.1", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.18.1" }
cumulus-primitives-utility = { version = "0.20.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.22.0" }
emulated-integration-tests-common = { version = "20.0.0", default-features = false }
pallet-collator-selection = { version = "21.0.0", default-features = false }
parachain-info = { version = "0.20.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "21.0.0", default-features = false }

# Runtimes
asset-hub-paseo-runtime = { git = "https://github.com/paseo-network/runtimes", default-features = false, tag = "v1.3.4" }
asset-hub-westend-runtime = { version = "0.29.1" }
paseo-runtime = { git = "https://github.com/paseo-network/runtimes", default-features = false, tag = "v1.3.4" }
paseo-runtime-constants = { git = "https://github.com/paseo-network/runtimes", default-features = false, tag = "v1.3.4" }
westend-runtime = { version = "22.1.0" }
westend-runtime-constants = { version = "20.0.0", default-features = false }

ismp = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2412", default-features = false }
ismp-parachain = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2412", default-features = false }
ismp-parachain-inherent = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2412", default-features = false }
ismp-parachain-runtime-api = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2412", default-features = false }
pallet-ismp = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2412", default-features = false }
pallet-ismp-rpc = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2412", default-features = false }
pallet-ismp-runtime-api = { git = "https://github.com/r0gue-io/ismp", branch = "polkadot-stable2412", default-features = false }
